# Quantum-Sentinel-Nexus

./: .gitpod.yml  .pre-commit-config.yaml  README.md  Taskfile.yaml  Tiltfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml
charts/alert-router-svc/: Chart.yaml  values.yaml
charts/alert-router-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/auth-gateway-svc/: Chart.yaml  values.yaml
charts/auth-gateway-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/compliance-svc/: Chart.yaml  values.yaml
charts/compliance-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
charts/dashboard-ui/: Chart.yaml  values.yaml
charts/dashboard-ui/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/digital-twin-svc/: Chart.yaml  values.yaml
charts/digital-twin-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
charts/edge-node-agent/: Chart.yaml  values.yaml
charts/edge-node-agent/templates/: NOTES.txt  _helpers.tpl  daemonset.yaml  serviceaccount.yaml
charts/feature-engine-svc/: Chart.yaml  values.yaml
charts/feature-engine-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  serviceaccount.yaml
charts/fl-coordinator-svc/: Chart.yaml  values.yaml
charts/fl-coordinator-svc/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
charts/fl-coordinator-svc/templates/charts/fl-coordinator-svc/templates/: NOTES.txt
charts/ingestion-svc/: Chart.yaml  values.yaml
charts/ingestion-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/neuromorph-svc/: Chart.yaml  values.yaml
charts/neuromorph-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/payments-simulator/: Chart.yaml  values.yaml
charts/payments-simulator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/qsn-infra/: Chart.yaml  values.yaml
charts/scoring-svc/: Chart.yaml  values.yaml
charts/scoring-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml
charts/threat-intel-svc/: Chart.yaml  values.yaml
charts/threat-intel-svc/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
docs/: index.md  mkdocs.yml
docs/architecture/: high-level-design.md
docs/getting-started/: local-setup.md  overview.md  tutorial.md
infra/aws/: main.tf
infra/local-dev/: kind-cluster.yaml
services/alert-router-svc/: CMakeLists.txt  Dockerfile
services/alert-router-svc/src/: main.cpp
services/audit-svc/: Dockerfile  go.mod  go.sum  main.go
services/audit-svc/chaincode/: audit_contract.go
services/auth-gateway-svc/: Dockerfile  package.json
services/auth-gateway-svc/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
services/compliance-svc/: Dockerfile  build.gradle.kts
services/compliance-svc/src/main/kotlin/com/qsn/: ComplianceSvcApplication.kt
services/compliance-svc/src/main/kotlin/com/qsn/configuration/: DroolsConfiguration.kt
services/compliance-svc/src/main/kotlin/com/qsn/kafka/: AlertListener.kt
services/compliance-svc/src/main/kotlin/com/qsn/service/: ComplianceService.kt
services/compliance-svc/src/main/resources/: application.properties
services/compliance-svc/src/main/resources/rules/: compliance.drl
services/dashboard-ui/: Dockerfile  next.config.mjs  package.json
services/dashboard-ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
services/digital-twin-svc/: Dockerfile  build.sbt
services/digital-twin-svc/src/main/protobuf/: digital_twin.proto
services/digital-twin-svc/src/main/resources/: application.conf
services/digital-twin-svc/src/main/scala/com/qsn/: DigitalTwinServer.scala
services/edge-node-agent/: CMakeLists.txt  Dockerfile
services/edge-node-agent/src/: main.cpp
services/feature-engine-svc/: Dockerfile  main.py  requirements.txt
services/fl-coordinator-svc/: Dockerfile  main.py  requirements.txt
services/ingestion-svc/: go.mod  go.sum  main.go
services/neuromorph-svc/: Dockerfile  main.py  requirements.txt
services/payments-animator/: go.mod
services/payments-simulator/: Dockerfile  go.sum  locustfile.py  main.go
services/scoring-svc/: Cargo.toml  Dockerfile  build.rs
services/scoring-svc/proto/scoring/v1/: scoring.proto
services/scoring-svc/src/: main.rs
services/threat-intel-svc/: Dockerfile  main.py  requirements.txt
tools/cli/: Developer CLI: qsnctl
